# mlops-forecast

./: .dockerignore  .gitignore  .kedro.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
api/: main.py  schemas.py
conf/base/: catalog.yml  mlflow.yml  parameters.yml
conf/local/: credentials.yml.example
data/01_raw/: sample_opsd_germany_hourly.csv
docker/: api.Dockerfile  streamlit.Dockerfile
docs/: dataset-selection.md  presentation-outline.md
feature_store/feature_repo/: electricity.py  feature_store.yaml
notebooks/: 01_eda.py
report/: MLops_Report.tex
scripts/: download_data.py  feast_demo.py  generate_report_figures.py  publish_to_feast.py  run_windows.ps1
src/mlops_forecast/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/mlops_forecast/pipelines/data_cleaning/: nodes.py  pipeline.py
src/mlops_forecast/pipelines/data_drifts/: nodes.py  pipeline.py
src/mlops_forecast/pipelines/data_feat_engineering/: nodes.py  pipeline.py
src/mlops_forecast/pipelines/data_quality/: nodes.py  pipeline.py
src/mlops_forecast/pipelines/data_split/: nodes.py  pipeline.py
src/mlops_forecast/pipelines/model_predict/: nodes.py  pipeline.py
src/mlops_forecast/pipelines/model_selection/: nodes.py  pipeline.py
src/mlops_forecast/pipelines/model_train/: nodes.py  pipeline.py
src/mlops_forecast/serving/: __init__.py  quantile_lgbm.py
streamlit_app/: app.py
tests/: conftest.py  test_serving.py
tests/api/: test_main.py
tests/pipelines/: test_data_cleaning.py  test_data_feat_engineering.py  test_data_split.py  test_pipeline_integration.py
